--- a/pizzaProject/src/components/Header/s.module.css
+++ b/pizzaProject/src/components/Header/s.module.css
@@ -20,13 +20,14 @@
 .nav {
 	display: flex;
 	justify-content: space-between;
-	flex: 0 0 417px;
+	flex: 0 0 450px;
 }
 
 
 .link a {
 	color: white;
 	transition: all .4s linear;
+	font-size: 18px;
 }
 
 .link a:hover {
