--- a/pizzaProject/src/styles/index.css
+++ b/pizzaProject/src/styles/index.css
@@ -4,7 +4,7 @@
 :root {
 	--orange: #F6B716;
 	--orange-hover: #cc9711;
-	font-family: Inter;
+	font-family: 'Inter';
 }
 
 #root {
@@ -21,4 +21,12 @@ body {
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 20px;
+}
+
+.title {
+	font-size: 48px;
+	font-weight: 700;
+	color: black;
+	margin-top: 70px;
+	text-align: center;
 }
