--- a/pizzaProject/src/components/MainPage/s.module.css
+++ b/pizzaProject/src/components/MainPage/s.module.css
@@ -12,4 +12,20 @@
 .btn {
 	align-self: center;
 	margin-bottom: 100px;
+	width: 135px;
+	height: 55px;
+	background-color: var(--orange);
+	color: white;
+	font-size: 16px;
+	font-weight: 600;
+	border-radius: 45px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	transition: all .4s linear;
+}
+
+.btn:hover {
+	background-color: var(--orange-hover);
 }
