added order form layout and post request

--- a/pizzaProject/src/components/OrderForm/s.module.css
+++ b/pizzaProject/src/components/OrderForm/s.module.css
@@ -1,20 +1,33 @@
-.wrapper {
+.section {
+	display: flex;
+	flex-direction: column;
 	margin-top: 80px;
-
 }
 
-.section {}
 
-.flat {
-	width: 124px;
+.inputs {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
 }
 
-.house {
-	width: 76px;
+.top {
+	width: 90%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
+
+.bottom {
+	margin-top: 30px;
+	display: flex;
+	width: 51%;
+	justify-content: space-between;
+}
+
+
 
 .section input {
-	/* width: 40px; */
 	height: 40px;
 	padding: 0 19px;
 	background: #FFFFFF;
@@ -32,26 +45,56 @@
 	margin-bottom: 45px;
 }
 
-.error {
+.comment {
+	margin-top: 20px;
+	width: 400px;
+	height: 100px;
+	padding: 10px 19px 0;
+	background: #FFFFFF;
+	border: 1px solid #D4D4D4;
+	border-radius: 8px;
+	font-size: 16px;
+	color: #4A4A4A;
+	resize: none;
+}
+
+.flat {
+	width: 124px;
+}
+
+.house {
+	width: 76px;
+}
+
+.errorWrapper {
 	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+.error {
+	position: absolute;
 	top: -30px;
+	right: -50px;
 	background: #191F2C;
 	border-radius: 4px;
 	color: white;
 	font-size: 12px;
-	/* padding: 3px 8px; */
-	position: relative;
+	white-space: nowrap;
+	padding: 4px 8px;
 }
 
-/* .error:after {
+.error:after {
 	content: '';
 	position: absolute;
+	transform: matrix(1, 0, 0, -1, 0, 0);
+	border: 7px solid transparent;
+	border-bottom: 10px solid #191F2C;
 	left: 0;
-	top: 0;
-	width: 10px;
-	height: 10px;
-	background-color: #191F2C;
-} */
+	bottom: -14px;
+	width: 5px;
+	height: 7px;
+}
 
 .send {
 	margin-top: 70px;
@@ -80,3 +123,10 @@ input[type='text']:after {
 	color: white;
 	background-color: black;
 } */
+
+
+
+input[type='checkbox'],
+label {
+	cursor: pointer;
+}
