--- a/pizzaProject/src/components/SelectPizza/s.module.css
+++ b/pizzaProject/src/components/SelectPizza/s.module.css
@@ -1,12 +1,11 @@
 .select {
-	/* padding-top: 80px; */
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
 }
 
 .content {
-	padding-bottom: 80px;
+	padding: 70px 0;
 
 	flex: 1 1 auto;
 	background-color: white;
