--- a/pizzaProject/src/styles/index.css
+++ b/pizzaProject/src/styles/index.css
@@ -27,7 +27,7 @@ body {
 	font-size: 48px;
 	font-weight: 700;
 	color: black;
-	margin-top: 70px;
+	/* margin-top: 70px; */
 	text-align: center;
 }
 
