--- a/pizzaProject/src/assets/styles/index.css
+++ b/pizzaProject/src/assets/styles/index.css
@@ -2,54 +2,57 @@
 
 
 :root {
-	--orange: #F6B716;
-	--orange-hover: #cc9711;
-	font-family: 'Inter';
+  --orange: #F6B716;
+  --orange-hover: #cc9711;
+  font-family: 'Inter';
 }
 
 #root {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-	width: 100%;
-	height: 100vh;
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .box {
-	width: 1200px;
-	margin: 0 auto;
-	padding: 0 20px;
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .title {
-	font-size: 48px;
-	font-weight: 700;
-	color: black;
-	/* margin-top: 70px; */
-	text-align: center;
+  font-size: 48px;
+  font-weight: 700;
+  color: black;
+  /* margin-top: 70px; */
+  text-align: center;
 }
 
 .selected {
-	background-color: var(--orange);
+  background-color: var(--orange);
 }
 
 .price {
-	font-weight: 300;
-	font-size: 24px;
-	color: #121146;
+  font-weight: 300;
+  font-size: 24px;
+  color: #121146;
 
 }
 
 .name {
-	font-weight: 600;
-	font-size: 18px;
-	color: black;
+  font-weight: 600;
+  font-size: 18px;
+  color: black;
 }
 
 .size {
-	font-weight: 400;
-	font-size: 12px;
-	color: black;
+  font-weight: 400;
+  font-size: 12px;
+  color: black;
 }
