--- a/pizzaProject/src/pages/select/PizzaList/s.module.css
+++ b/pizzaProject/src/pages/select/PizzaList/s.module.css
@@ -1,75 +1,76 @@
 .list {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .card {
-	margin-top: 50px;
-	flex: 0 0 260px;
-	width: 260px;
-	border: 2px solid #ECEEF7;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 30px 20px 10px 20px;
-	border-radius: 30px;
+  margin-top: 50px;
+  flex: 0 0 260px;
+  width: 260px;
+  border: 2px solid #ECEEF7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 20px 10px 20px;
+  border-radius: 30px;
 }
 
 .content {
-	flex: 1 1 auto;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer {
-	width: 100%;
-	margin-top: 20px;
-	flex: 0 0 auto;
-	display: flex;
-	justify-content: space-between;
-	/* flex-direction: column; */
-	align-items: center;
+  width: 100%;
+  margin-top: 20px;
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .add {
-	margin-top: 11px;
-	width: 33px;
-	height: 33px;
-	cursor: pointer;
-	border: 2px solid #ECEEF6;
-	border-radius: 50%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition: all .4s linear;
+  margin-top: 11px;
+  width: 33px;
+  height: 33px;
+  cursor: pointer;
+  border: 2px solid #ECEEF6;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all .4s linear;
 }
 
 
 .add:hover {
-	background-color: var(--orange);
+  background-color: var(--orange);
 }
 
-.imgWrapper {}
-
 .imgWrapper img {
-	max-width: 100%;
-	/* filter: drop-shadow(20px 10px 20px rgba(143, 92, 32, 0.1)) drop-shadow(10px 5px 10px rgba(143, 92, 32, 0.1)); */
+  max-width: 100%;
+}
+
+.loading {
+  width: 0;
+  height: 0;
 }
 
 
 .info {
-	display: flex;
-	justify-content: space-between;
-	margin-top: 29px;
-	align-items: center;
-	width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 29px;
+  align-items: center;
+  width: 100%;
 }
 
 
 .ingredients {
-	font-size: 12px;
-	margin-top: 12px;
-	line-height: 140%;
+  font-size: 12px;
+  margin-top: 12px;
+  line-height: 140%;
 }
